# javascript-bridge

./: .gitignore  .travis.yml  CHANGELOG.md  HISTORY.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  javascript-bridge.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
benchmarks/: Main.hs  javascript-bridge-benchmarks.cabal
examples/: Main.hs  Main.html  Multi.hs  Slider.hs  Slider.html  Sliders.hs  Sliders.html  Text.hs  Text.html  UpDown.hs  UpDown.html
src/Network/: JavaScript.hs
src/Network/JavaScript/: ElmArchitecture.hs  Future.hs  Internal.hs  Reactive.hs  Services.hs  Widgets.hs
test/: Main.hs
