name:                javascript-bridge-benchmarks
version:             0.1
synopsis:            Remote Monad for JavaScript on the browser (Benchmarks)
description:         Bridge from Haskell to JavaScript on the browser (Benchmarks)
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
copyright:           Copyright (c) 2016 The University of Kansas
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.3
                   , GHC == 8.10.1

executable javascript-bridge-benchmarks
  ghc-options:    -Wall -O2 -rtsopts
  build-depends:       base                 >= 4.11    && < 4.15
                     , javascript-bridge
                     , binary               >= 0.8     && < 0.9
                     , aeson                >= 1.0     && < 1.6
                     , containers           >= 0.5     && < 0.7
                     , criterion            >= 1.1     && < 1.6
                     , scotty               >= 0.11    && < 0.13
                     , free                 >= 4.12    && < 5.2
                     , scientific           >= 0.3.4.9 && < 0.4
                     , stm                  >= 2.4     && < 2.6
                     , text                 >= 1.2     && < 1.3
                     , transformers         >= 0.4     && < 0.6
                     , unordered-containers >= 0.2.7   && < 0.3
                     , wai                  >= 3.2     && < 3.3
                     , wai-websockets       >= 3.0.1   && < 3.1
                     , websockets           >= 0.10    && < 0.13
  main-is: Main.hs
--  hs-source-dirs: ..
--  other-modules:     Network.JavaScript,
--                     Network.JavaScript.Services
  default-language:    Haskell2010
  ghc-options:         -Wall
