name:                javascript-bridge-benchmarks
version:             0.1
synopsis:            Remote Monad for JavaScript on the browser (Benchmarks)
description:         Bridge from Haskell to JavaScript on the browser (Benchmarks)
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
copyright:           Copyright (c) 2016 The University of Kansas
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.3
                   , GHC == 9.12.2

executable javascript-bridge-benchmarks
  ghc-options:    -Wall -O2 -rtsopts
  build-depends:       base                 >= 4.11    && < 4.22
                     , javascript-bridge
                     , aeson                >= 1.0     && < 2.3
                     , criterion            >= 1.1     && < 1.7
                     , scotty               >= 0.11    && < 0.31
                     , stm                  >= 2.4     && < 2.6
                     , text                 >= 1.2     && < 2.2
  main-is: Main.hs
--  hs-source-dirs: ..
--  other-modules:     Network.JavaScript,
--                     Network.JavaScript.Services
  default-language:    Haskell2010
  ghc-options:         -Wall
